--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p id="demoOne"></p>
     <script>
 
-       //  JavaScript funksiyalari chaqirilgan ketma-ketlikda bajariladi. Ular belgilangan ketma-ketlikda emas.
+       // JavaScript funksiyalari chaqirilgan ketma-ketlikda bajariladi. Ular belgilangan ketma-ketlikda emas.
         // function myDisplayer(some) {
         //     document.getElementById("demo").innerHTML = some
         // }
@@ -127,34 +127,34 @@
             // Ikkalasi ham ixtiyoriy, shuning uchun siz faqat muvaffaqiyat yoki muvaffaqiyatsizlik 
             // uchun qayta qo'ng'iroqni qo'shishingiz mumkin.
 
-            // function myDisplayer(some) {
-            //     document.getElementById("demo").innerHTML = some
-            // }
+        //     function myDisplayer(some) {
+        //         document.getElementById("demo").innerHTML = some
+        //     }
 
-            // let myPromise = new Promise(function(myResolve, myReject) {
-            //     let x = 0;
+        //     let myPromise = new Promise(function(myResolve, myReject) {
+        //         let x = 0;
 
-            //     if (x == 0 ){
-            //         myResolve("OK");
-            //     } else {
-            //         myReject("Error");
-            //     }
-            // });
-            // myPromise.then(
-            //     function(value) { myDisplayer(value);},  
-            //     function(error) { myDisplayer(error);}
-            // );
+        //         if (x == 0 ){
+        //             myResolve("OK");
+        //         } else {
+        //             myReject("Error");
+        //         }
+        //     });
+        //     myPromise.then(
+        //         function(value) { myDisplayer(value);},  
+        //         function(error) { myDisplayer(error);}
+        //     );
 
-            // JavaScript Promise ga misol
-                // Vaqt tugashi kutilmoqda
-                // Fayl kutilmoqda
+        //     JavaScript Promise ga misol
+        //         Vaqt tugashi kutilmoqda
+        //         Fayl kutilmoqda
         // Qayta qo'ng'iroqdan foydalanishga misol.
-                // setTimeout(function() {
-                //     myFunction("ayubxon")
-                // },5000);
-                // function myFunction(param) {
-                //     document.getElementById("demo").innerHTML = param
-                // }
+        //         setTimeout(function() {
+        //             myFunction("ayubxon")
+        //         },5000);
+        //         function myFunction(param) {
+        //             document.getElementById("demo").innerHTML = param
+        //         }
 
 
         // Promise dan foydalanishga misol.
@@ -173,19 +173,19 @@
         
         //async Promise funksiyani qaytarishga majbur qiladi.
         //await Promise funksiyani kutishga majbur qiladi.
-        function Displayer(some){
-            document.getElementById("demo").innerHTML = some
-        }
+        // function Displayer(some){
+        //     document.getElementById("demo").innerHTML = some
+        // }
 
-        async function myFunction(){
-            return "hello"
-        }
+        // async function myFunction(){
+        //     return "hello"
+        // }
       
-        myFunction().then(
-            function(value) {Displayer(value)},
-            function(error) {Displayer(error)}
+        // myFunction().then(
+        //     function(value) {Displayer(value)},
+        //     function(error) {Displayer(error)}
 
-        )
+        // )
 
 
     </script>
